--- a/HEUR_GA_miroslav_kubu_v2.ipynb
+++ b/HEUR_GA_miroslav_kubu_v2.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "### Miroslav Kubů\n",
     "\n",
-    "kubumiro@fjfi.cvut.cz"
+    "email: kubumiro@fjfi.cvut.cz"
    ]
   },
   {
